--- a/first_aasignment.html
+++ b/first_aasignment.html
@@ -42,7 +42,7 @@
 
     <!-- Step 4 -->
     <button>Click me</button><br><br>
-
+ 
     <!-- Step 5 -->
     <table border="1">
         <tr>
@@ -65,10 +65,27 @@
             <td>wednesday</td>
             <td>15:00</td>
         </tr>
-    </table>
+    </table><br><br>
 
 
     <!-- Step 6(optional) -->
+     <table border="2">
+        <tr>
+            <td>
+                <h3>menu</h3>
+                <ul>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">about us</a></li>
+                    <li><a href="#">profile</a></li>
+                </ul>
+                
+            </td>
+            <td valign = "top">
+                <h3>main content</h3>
+                <p>this is the main page, there will be all content</p>
+            </td>
+        </tr>
+     </table>
 
     
     <!-- Step 7 -->
