--- a/1 week/FisPage.html
+++ b/1 week/FisPage.html
@@ -6,7 +6,7 @@
     <title>My First Webpage</title>
 </head>
 <body>
-    <a href="../Main.html">Home</a>
+    <a href="../index.html">Home</a>
     <!-- Step 1 -->
     <h1>My name is Dias</h1>
     <h2>Course: SE-2436</h2>
