--- a/3 week/ThirdPage.html
+++ b/3 week/ThirdPage.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class ="head-box">
             <div class="logo">
-                <a href="../Main.html">Home</a>
+                <a href="../index.html">Home</a>
             </div>
             <nav class="head-link">
                 <ul>
@@ -35,9 +35,10 @@
                 <div class="card-txt">
                     <h3>Project One</h3>
                     <p>
-                        A brief description of the first project, 
-                        highlighting its key features and technologies used. 
-                        This card is a demonstration of equal height Flexbox items.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Necessitatibus perferendis placeat error autem, 
+                        officia quasi consequuntur nisi minus, non commodi cupiditate repellat, 
+                        facere sequi mollitia rem voluptates exercitationem temporibus voluptatem.
                     </p>
                 </div>
                 <div class="card-btn">
@@ -49,11 +50,10 @@
                 <div class="card-txt">
                     <h3>Project Trhee</h3>
                     <p>
-                        This project focuses on advanced CSS layouts and animations. 
-                        The cards are arranged in a responsive row using Flexbox, 
-                        and they maintain the same height thanks to the 
-                        `flex-grow` property on the paragraph and `justify-between` 
-                        on the container.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Necessitatibus perferendis placeat error autem, 
+                        officia quasi consequuntur nisi minus, non commodi cupiditate repellat, 
+                        facere sequi mollitia rem voluptates exercitationem temporibus voluptatem.
                     </p>
                 </div>
                 <div class="card-btn">
@@ -65,9 +65,10 @@
                 <div class="card-txt">
                     <h3>Project Two</h3>
                     <p>
-                        A demonstration of a full-stack application. 
-                        The cards have consistent spacing using `gap` in Flexbox, 
-                        ensuring a clean and professional look.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Necessitatibus perferendis placeat error autem, 
+                        officia quasi consequuntur nisi minus, non commodi cupiditate repellat, 
+                        facere sequi mollitia rem voluptates exercitationem temporibus voluptatem.
                     </p>
                 </div>
                 <div class="card-btn">
@@ -138,6 +139,67 @@
 
         </div>
         <br><br><hr>
+
+        <!---------------PART3-------------------->
+
+        <section class="part3-section">
+            <header class="part3-header">
+                <div class="part3-nav">
+                    <a href="#">Logo</a>
+                    <nav>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Projects</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
+
+            <div class="part3-layout">
+                <div class="part3-projects">
+                    <div class="part3-card">
+                        <div class="part3-card-img"><img src="1.jpg" alt="project"></div>
+                        <div class="part3-card-text">
+                            <h3>Project A</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                        <div class="part3-card-btn">
+                            <button>View Details</button>
+                        </div>
+                    </div>
+
+                    <div class="part3-card">
+                        <div class="part3-card-img"><img src="1.jpg" alt="project"></div>
+                        <div class="part3-card-text">
+                            <h3>Project B</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                        <div class="part3-card-btn">
+                            <button>View Details</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- SIDEBAR -->
+                <aside class="part3-sidebar">
+                    <h3>About Me</h3>
+                    <p>Short description or sidebar info goes here.</p>
+                    <ul>
+                        <li>Skill 1</li>
+                        <li>Skill 2</li>
+                        <li>Skill 3</li>
+                    </ul>
+                </aside>
+            </div>
+
+            <footer class="part3-footer">
+                <p>© 2025 My Portfolio</p>
+            </footer>
+        </section>
+
+
+        
 
     </main>
 
