--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <a href="1 week/FisPage.html">1 week</a>
       <a href="2 week/SecPage.html">2 week</a>
       <a href="3 week/ThirdPage.html">3 week</a>
-      <a href="week4.html">4 week</a>
-      <a href="week5.html">5 week</a>
-      <a href="week6.html">6 week</a>
-      <a href="week7.html">7 week</a>
-      <a href="week8.html">8 week</a>
+      <a href="4 week/FourthPage.html">4 week</a>
+      <a href="5 week/FifthPage.html">5 week</a>
+      <a href="6 week/SixPage.html">6 week</a>
+      <a href="7 week/SeventhPage.html">7 week</a>
+      <a href="8 week/index.html">8 week</a>
     </div>
   </div>
 
